
	* fix MakeMaker manicheck to ignore META.yml and inc/ directory for Module::Install

0.49
	* ProjectType::Perl now works with Makefile.PL that uses Module::Install

0.48
	* new step: AddToSVNDir
        * skip commit step if there is nothing to commit
0.47
	* lot more/updated docs
0.46
	* svk support from Tatsuhiko Miyagawa
0.45
	* fix ChangeVersion (which was doing nothing) when VERSION (not
	  VERSION_FROM) was in Makefile.PL
	* make the anti-compulsive don't-run-me-code smarter
0.44
	* make UploadCPAN fail earlier if MakeDist wasn't done.
	* make ProjectType::MakeMaker's disttest ignore the .shipit file,
	  so you don't need to put it in MANIFEST.SKIP (which is often the only
	  thing it contains, in addition to all the boilerplate stuff)
	* don't upload to CPAN in dry-run mode
	* ProjectType::AutoConf support (releases memcached, at least)

0.43
	* default config as written out with --write-config had syntax error,
	  and old list of default plugins
0.42
	* first version able to release itself to CPAN
0.41
	* rename unimplemented "Release" step to "MakeDist"
0.40
	* stop if they're trying to run shipit and no changes to be shipped
0.39
	* respecting previously-added dry-run option
0.38
	* make Perl projectype cleanup after itself in disttest
0.37
	* more docs, auto-write out config file
	* make VC::SVN fail if locally-added files, and recommend
	  running "svn pe svn:ignore ."
0.36
	* the documentation release!  and clean some noise.
0.35
	* the version that can properly tag releases
0.34
	* the release that can do commit messages from ChangeLog diffs
0.33
	* test release